# rag-app

./: .gitignore  README.md  docker-compose.yml  start.sh
backend/: .env.example  pyproject.toml
backend/app/: config.py  dependencies.py  main.py
backend/app/api/: auth.py  backends.py  databases.py  documents.py  models.py  query.py  router.py
backend/app/backends/: base.py  plaintext_backend.py  sql_backend.py  vector_backend.py
backend/app/core/: ingestion.py  qa_chain.py  reranker.py  retriever_factory.py  security.py
backend/app/db/: database.py  models.py  mongo.py
backend/app/models/: requests.py  responses.py
backend/app/utils/: file_utils.py
backend/rag_backends/: __init__.py  eval.py  ingestion.py  plaintext.py  pyproject.toml  qa_chain.py  registry.py  reranker.py  sql.py  vector.py
backend/tests/rag_backends/: conftest.py  test_plaintext_backend.py  test_sql_backend.py  test_vector_backend.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/api/: auth.ts  backends.ts  client.ts  databases.ts  documents.ts  models.ts  query.ts
frontend/src/components/: AnswerPanel.tsx  AuthForm.tsx  BackendSelector.tsx  ChunksModal.tsx  DatabaseSelector.tsx  DocumentList.tsx  DocumentUploader.tsx  QueryBox.tsx  SmartChat.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/hooks/: useBackend.ts  useDatabase.ts  useDocuments.ts  useModels.ts  useQuery.ts
frontend/src/types/: api.ts
