[project]
name = "rag-app-backend"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "python-multipart>=0.0.12",
  "langchain>=0.3",
  "langchain-community>=0.3",
  "langchain-core>=0.3",
  "langchain-openai>=0.2",
  "langchain-chroma>=0.1",
  "chromadb>=0.5",
  "sqlalchemy>=2.0",
  "aiosqlite>=0.20",
  "rank-bm25>=0.2.2",
  "pypdf>=5.0",
  "python-docx>=1.1",
  "unstructured>=0.16",
  "pydantic>=2.9",
  "pydantic-settings>=2.6",
  "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
  "ipykernel>=6.29",
  "jupyter>=1.1",
  "httpx>=0.27",
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
