[project]
name = "rag-backends"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
  "langchain>=0.3",
  "langchain-core>=0.3",
  "langchain-openai>=0.2",
  "langchain-chroma>=0.1",
  "chromadb>=0.5",
  "rank-bm25>=0.2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rag_backends"]
