[project]
name = "rag-backends"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
  "langchain>=0.3",
  "langchain-core>=0.3",
  "langchain-community>=0.3",
  "langchain-openai>=0.2",
  "langchain-chroma>=0.1",
  "langchain-text-splitters>=0.3",
  "chromadb>=0.5",
  "rank-bm25>=0.2.2",
  "pypdf>=5.0",
  "python-docx>=1.1",
  "unstructured>=0.16",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rag_backends"]
